    Fixed: Could not build local vsftpd package when gpg has been initialized; .changes file cannot be signed
    Fixed: Courier sysvinit script must not be copied when selected PO server is Dovecot
    Fixed: Disabled mod_tls_memcache.c module to avoid weird notice on restart (ProFTPD)
    Fixed: Enable support for UTF-8 file systems (VsFTPD)
    Fixed: Hide real server identity (ProFTPD)
    Fixed: IP addresses are added multiple time in Apache 00_nameserver.conf file (Httpd servers)
    Fixed: ON|OFF string not recognized as boolean value in imscp.cnf conffile (MySQL)
    Fixed: Traffic accounting routines must not remove log files (ProFTPD/VsFTPd). Files are now truncated instead.
    Fixed: Useless reload of VsFTPd when adding/removing an FTP user (privileges are given by session)
    Fixed: VsFTPd doesn't reopen xferlog file automatically when the file has been removed, leading to traffic data loss
    Fixed: VsFTPD doesn't support non-ascii characters in FTP usernames
    Fixed: When the --skip-distro-packages installer option is set, the VsFTPD local package shouldn't be rebuilt
    Removed: /var/log/proftpd/ftp_traff.log custom log. Traffic data are now pulled from /var/log/proftpd/xferlog

VLOGGER
    Fixed: Avoid SELECT query while dump of traffic data
    Fixed: SQL statement must be prepared once per dump process

YOUTRACK
    IP-1231 Default SPF DNS resource records should be overrideable
    IP-1402 ProFTPD doesn't restart properly - killed (signal 15) - Wheezy/Precise/Trusty
    IP-1509 Could not generate SSL certificate through the frontEnd - Invalide SSL certificate
    IP-1510 VsFTPd - Use of uninitialized value $tmpFile
    IP-1511 Use of uninitialized value $imscpOldConfig{"BASE_SERVER_VHOST"} on fresh install
    IP-1513 Autoreply - Do not autoreply to messages marked as SPAM
    IP-1514 Could not install i-MSCP on Ubuntu Trusty Thar in some contexts
