@@ -70,6 +70,7 @@ SERVERS
     Fixed: Disabled mod_tls_memcache.c module to avoid weird notice on restart (ProFTPD)
     Fixed: Enable support for UTF-8 file systems (VsFTPD)
     Fixed: Hide real server identity (ProFTPD)
+    Fixed: Invalid version format (non-numeric data) when installing VsFTPd on Debian testing (Stretch)
     Fixed: IP addresses are added multiple time in Apache 00_nameserver.conf file (Httpd servers)
     Fixed: ON|OFF string not recognized as boolean value in imscp.cnf conffile (MySQL)
     Fixed: Traffic accounting routines must not remove log files (ProFTPD/VsFTPd). Files are now truncated instead.
